message(FATAL_ERROR Outdated and unused)

set(LTJS_TARGET ltjs_lib_won_api)

include(ltjs_common)

ltjs_add_default_options()

add_definitions(-D__WON_MASTER_CPP_BUILD__)

if (MSVC)
    add_compile_options(-GR)
endif ()

include_directories(
    .
)

set(
    HDRS
    wonauth/auth2certificate.h
    wonauth/authbase.h
    wonauth/authcertificate.h
    wonauth/authcertificatebase.h
    wonauth/authcontext.h
    wonauth/authpeerdata.h
    wonauth/authpubkeyblock.h
    wonauth/authsession.h
    wonauth/cdkey.h
    wonauth/crypttransform.h
    wonauth/getcertop.h
    wonauth/peerauthclient.h
    wonauth/peerauthop.h
    wonauth/peerauthserver.h
    wonauth/peerauthserverop.h
    woncommon/asyncop.h
    woncommon/asyncopcontainer.h
    woncommon/asyncoptracker.h
    woncommon/bimap.h
    woncommon/bytebuffer.h
    woncommon/completion.h
    woncommon/crc.h
    woncommon/criticalsection.h
    woncommon/criticalsection_linux.h
    woncommon/criticalsection_mac.h
    woncommon/criticalsection_windows.h
    woncommon/event.h
    woncommon/event_linux.h
    woncommon/event_mac.h
    woncommon/event_windows.h
    woncommon/filereader.h
    woncommon/filewriter.h
    woncommon/littleendian.h
    woncommon/md5.h
    woncommon/miscutil.h
    woncommon/platform.h
    woncommon/platform_linux.h
    woncommon/platform_mac.h
    woncommon/platform_windows.h
    woncommon/readbuffer.h
    woncommon/regkey.h
    woncommon/regkey_windows.h
    woncommon/smartptr.h
    woncommon/stringutil.h
    woncommon/thread.h
    woncommon/thread_linux.h
    woncommon/thread_mac.h
    woncommon/thread_windows.h
    woncommon/timerthread.h
    woncommon/wonconsole.h
    woncommon/wonfile.h
    woncommon/wontypes.h
    woncommon/writebuffer.h
    woncrypt/biginteger.h
    woncrypt/blowfish.h
    woncrypt/elgamal.h
    woncrypt/md5digest.h
    woncrypt/random.h
    wondb/createaccountop.h
    wondb/dbproxyop.h
    wondb/getaccountop.h
    wondb/getuseridfromnameop.h
    wondb/profiledata.h
    wondb/requestaccountinfoemailop.h
    wondb/requestpasswordemailop.h
    wondb/updateaccountop.h
    wondir/addentityop.h
    wondir/direntity.h
    wondir/direntityreplyparser.h
    wondir/dirtypes.h
    wondir/entitycleardataobjectsop.h
    wondir/entitymodifydataobjectsop.h
    wondir/entitysetdataobjectsop.h
    wondir/findentityop.h
    wondir/getdirop.h
    wondir/getentityrequest.h
    wondir/getmultidirop.h
    wondir/getserviceop.h
    wondir/modifyentityop.h
    wondir/removeentityop.h
    wondir/renameentityop.h
    wondir/renewentityop.h
    wonmisc/checkvalidversionop.h
    wonmisc/detectfirewallop.h
    wonmisc/dnstestop.h
    wonmisc/findpatchop.h
    wonmisc/ftpgetop.h
    wonmisc/gamespysupport.h
    wonmisc/getmotdop.h
    wonmisc/getpatchlistop.h
    wonmisc/getversionop.h
    wonmisc/gqueryreporting.h
    wonmisc/httpgetop.h
    wonmisc/mediametrix.h
    wonmisc/nonport.h
    wonmisc/patchtypes.h
    wonrouting/allroutingops.h
    wonrouting/routingconnection.h
    wonrouting/routingderivedserverop.h
    wonrouting/routingop.h
    wonrouting/routingtypes.h
    wonrouting/smartroutingconnection.h
    wonrouting/routingabortservshutdownop.h
    wonrouting/routingbanclientop.h
    wonrouting/routingbecomemoderatorop.h
    wonrouting/routinggetbaduserlistop.h
    wonrouting/routingmuteclientop.h
    wonrouting/routingsendserveralertop.h
    wonrouting/routingserveralertop.h
    wonrouting/routingservshutdownabortop.h
    wonrouting/routingservshutdownstartop.h
    wonrouting/routingstartservshutdownop.h
    wonrouting/routingyouwerebannedop.h
    wonrouting/routingyouweremutedop.h
    wonrouting/routingclientflagschangedop.h
    wonrouting/routingclientjoinedserverop.h
    wonrouting/routingclientleftserverop.h
    wonrouting/routingdetectfirewallop.h
    wonrouting/routingdisconnectclientop.h
    wonrouting/routinggetclientlistop.h
    wonrouting/routingpeerchatop.h
    wonrouting/routingpeerdataop.h
    wonrouting/routingregisterclientop.h
    wonrouting/routingsendchatop.h
    wonrouting/routingsendcomplaintop.h
    wonrouting/routingsenddataop.h
    wonrouting/routingsetclientflagsop.h
    wonrouting/routingcreatedataobjectop.h
    wonrouting/routingdataobjectcreatedop.h
    wonrouting/routingdataobjectdeletedop.h
    wonrouting/routingdataobjectmodifiedop.h
    wonrouting/routingdeletedataobjectop.h
    wonrouting/routingmodifydataobjectop.h
    wonrouting/routingreaddataobjectop.h
    wonrouting/routingunsubdataobjectop.h
    wonrouting/routingacceptclientop.h
    wonrouting/routingcanceljoingroupop.h
    wonrouting/routingclientjoinedgroupop.h
    wonrouting/routingclientleftgroupop.h
    wonrouting/routingcreategroupop.h
    wonrouting/routinggetgrouplistop.h
    wonrouting/routinggetgrouplistreqop.h
    wonrouting/routinggetmembersofgroupop.h
    wonrouting/routinggroupcaptchangedop.h
    wonrouting/routinggroupcreatedop.h
    wonrouting/routinggroupdeletedop.h
    wonrouting/routinggroupflagschangedop.h
    wonrouting/routinggroupinvitationop.h
    wonrouting/routinggroupjoinattemptop.h
    wonrouting/routinggroupmplyrschangedop.h
    wonrouting/routinggroupnamechangedop.h
    wonrouting/routinggroupobservercountop.h
    wonrouting/routinginviteclientop.h
    wonrouting/routingjoingroupop.h
    wonrouting/routingleavegroupop.h
    wonrouting/routingmemberflagschangedop.h
    wonrouting/routingrelinquishcaptainop.h
    wonrouting/routingsetgroupflagsop.h
    wonrouting/routingsetgroupmaxplayersop.h
    wonrouting/routingsetgroupnameop.h
    wonrouting/routingsetgrouppasswordop.h
    wonserver/multipingop.h
    wonserver/pingop.h
    wonserver/serverconnection.h
    wonserver/servercontext.h
    wonserver/serverop.h
    wonserver/serverrequestop.h
    wonsocket/acceptop.h
    wonsocket/asyncsocket.h
    wonsocket/blockingsocket.h
    wonsocket/closeop.h
    wonsocket/connectop.h
    wonsocket/ipaddr.h
    wonsocket/netstats.h
    wonsocket/queuesocket.h
    wonsocket/recvbytesfromop.h
    wonsocket/recvbytesop.h
    wonsocket/recvcrmsgop.h
    wonsocket/recvmsgop.h
    wonsocket/sendbytesop.h
    wonsocket/sendbytestoop.h
    wonsocket/sendmsgop.h
    wonsocket/socketop.h
    wonsocket/socketthread.h
    wonsocket/socketthreadex.h
    wonsocket/socketthreadex_linux.h
    wonsocket/socketthreadex_windows.h
    wonsocket/socketthreadsimple.h
    wonsocket/socketthreadwinsock2.h
    wonapi.h
    wonshared.h
    wonstatus.h
)

set(
    SRCS
    wonauth/auth.cpp
    woncommon/common.cpp
    woncrypt/crypt.cpp
    wondb/db.cpp
    wondir/dir.cpp
    wonmisc/gqueryreporting.c
    wonmisc/misc.cpp
    wonmisc/nonport.c
    wonrouting/routing.cpp
    wonserver/server.cpp
    wonsocket/socket.cpp
    wonapi.cpp
    wonstatus.cpp
)

add_library(
    ${LTJS_TARGET} STATIC
    ${HDRS}
    ${SRCS}
)

if (MSVC)
    target_link_libraries(
        ${LTJS_TARGET}
        ws2_32
    )
endif ()
